--- a/UFO-level-2/StarterCode/index.html
+++ b/UFO-level-2/StarterCode/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="static/css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -27,22 +29,28 @@
     </div>
     <div class="container">
       <div class="row margin-top-50">
-        <div class="col-md-2">
+        <div class="col-md-4">
           <aside class="filters">
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
                 <form>
-                  <div class="form-group">
-                    <ul class="list-group" id="filters">
-                      <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
-                      </li>
-                    </ul>
-                  </div>
-                  <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-                </form>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <select type="button" class="form-control btn btn-success" data-toggle="dropdown">
+                          <option href="#" class="dropdown-item">Date</option>
+                          <option href="#" class="dropdown-item">City</option>
+                          <option href="#" class="dropdown-item">State</option>
+                          <option href="#" class="dropdown-item">Country</option>
+                          <option href="#" class="dropdown-item">Shape</option>
+                      </select>
+                </div>
+                      <input type="text" id="input" class="form-control" placeholder="enter here">
+            </div>
+      </form>
+
+                <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+              
               </div>
             </div>
           </aside>
